(feat/styles): fix card text overflow

--- a/src/styles/_typography.module.scss
+++ b/src/styles/_typography.module.scss
@@ -30,6 +30,8 @@ overflow: hidden;
    line-height: 17px;
    color: $main-black;
    margin: 0;
+   text-overflow: ellipsis;
+   overflow: hidden;
 }
 
 .cardTags{
